--- a/app/views/game_page/playGame.html.erb
+++ b/app/views/game_page/playGame.html.erb
@@ -1,7 +1,7 @@
 <div style="width:100%;height:100vh;background:gray;margin:0;padding:0;background-image:linear-gradient(brown,black)" ><br/>
   <div style="width:100%;height:10vh;text-align:center;color:white" ><h1 id="result">Result will be shown here</h1></div>
 <h1 style="text-align:center;color:white"> Tic Tac Toe </h1>
-<div style="width:30vw;height:40vh;margin:3vh 34vw ">
+<div style="width:250px;height:250px;margin-left:41% ">
 <table style="width:100%;height:100%;border-radius:10px;border-color:white">
 <tr style="height:32%;width:100%;color:white">
   <td onclick="mark(this)" width="32%" id="g1"></td>
@@ -23,7 +23,7 @@
 <!-- <img src="<%# asset_path 'replay.png'  %>" alt=""> -->
 
 </div>
-<div style="color:white;width:10vw;height:9vh;text-align:center;margin-left:46%;margin-right:49%;" id="restart" onclick="resetGame()">
+<div style="color:white;width:10vw;height:9vh;text-align:center;margin-left:45%;margin-right:49%;" id="restart" onclick="resetGame()">
 Re-Start
 </div>
 <div style="height:10vh;width:100%;">
