--- a/app/views/game_page/playGame.html.erb
+++ b/app/views/game_page/playGame.html.erb
@@ -1,7 +1,7 @@
 <div style="width:100%;height:100vh;background:gray;margin:0;padding:0;background-image:linear-gradient(brown,black)" ><br/>
   <div style="width:100%;height:10vh;text-align:center;color:white" ><h1 id="result">Result will be shown here</h1></div>
 <h1 style="text-align:center;color:white"> Tic Tac Toe </h1>
-<div style="width:250px;height:250px;margin-left:41% ">
+<div style="width:250px;height:250px;margin:25px auto ">
 <table style="width:100%;height:100%;border-radius:10px;border-color:white">
 <tr style="height:32%;width:100%;color:white">
   <td onclick="mark(this)" width="32%" id="g1"></td>
